<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_margin">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card:cardElevation="@dimen/layout_marginTop"
        card:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_custom_item">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_source_currency"
                android:textSize="@dimen/text_size_full_text_currency"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/source_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/source_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_sum_source_currency"
                    android:inputType="numberDecimal"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_final_currency"
                android:textSize="@dimen/text_size_full_text_currency"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/final_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"/>

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_ok"
                android:layout_margin="@dimen/layout_margin"
                android:background="@color/colorPrimary"
                android:clickable="true"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_sum_final_currency"
                android:textSize="@dimen/text_size_full_text_currency"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/final_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_result"
                android:textSize="@dimen/text_size_final_text"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>